        http://scummvm.sourceforge.net/daily/ChangeLog

0.5.3(CVS) (2003-??-??)
- Added (still unplayable) Broken Sword 2 engine
- Improved (still incomplete) V1 game support
- Rewrote sound mixer, and several iMUSE bugs fixed
- Adlib GM emulation table revamped, providing more accurate software MIDI
- Added full and partial sound looping to Zak McKracken FmTowns

0.5.1 (2003-08-06) 
- Rewrote Beneath a Steel Sky savegame code (see note in READMEs 'Known Bugs')
- Fixed dialog skipping, music volume and several crashes/freezes in Steel Sky
- Fixed dialog skipping in V7 games
- Fixed glitch when quitting ScummVM in fullscreen mode on Mac OS X
- Fixed various COMI bugs related to actor placement/scaling
- Added complete Hebrew support for Simon the Sorcerer 1 and 2
- Several MorphOS and DreamCast port fixes
- DreamCast now runs Simon the Sorcerer 1 & 2
- Fixed a fullscreen problem on Mac OS X were you couldn't use the mouse in
  the top part of the screen by linking to a bugfixed version of SDL

0.5.0 (2003-08-02)
- Enhanced versions of Maniac Mansion and Zak McKracken are now supported and completable
- Beneath A Steel Sky is now supported and completable
- Added support for Amiga version of Monkey Island 1
- Initial unplayable support for V1 version of Maniac Mansion/Zak McKracken
- Curse of Monkey Island (COMI) support for playing from CD improved on Mac OS X
- Loading COMI savegames for disk 2 doesn't anymore require disk 1 first
- Rewritten iMUSE engine, and many Music fixes (exp. Monkey Island 2)
- Support for music in Humongous games and simon2dos/simon2talkie (XMIDI format)
- Support for music in simon1demo (Proprietary format)
- Complete music support for Simon the Sorcerer 2
- Improved music and sound support in Zak256
- Added Aspect Ratio option
- Many other bug fixes, improvements and optimizations

0.4.1 (2003-05-25)
- Added AdvMame3x filter
- Fixed crash in Curse of Monkey Island (and possibly other games as well)
- Fixed airport doors in Zak256