@@ -17,64 +17,23 @@ CP      := cp
 # Default compilation parameters. Normally don't edit these           #
 #######################################################################
 
-CXXFLAGS:= -g -O
-DEFINES :=
+DEFINES := -DHAVE_CONFIG_H
 LDFLAGS :=
 INCLUDES:= -I. -Icommon
 LIBS	:=
 OBJS	:=
 
-# Turn on useful warnings
-CXXFLAGS+= -Wall -pedantic -Wpointer-arith -Wcast-qual -Wcast-align -Wconversion
-CXXFLAGS+= -Wshadow -Wstrict-prototypes -Wuninitialized -Wimplicit -Wundef
-CXXFLAGS+= -Wno-long-long -Wno-multichar -Wno-unknown-pragmas -Wno-reorder
-CXXFLAGS+= -Wwrite-strings -fcheck-new -Wctor-dtor-privacy -Wnon-virtual-dtor
+# Load the make rules generated by configure
+include config.mak
 
-# Seems GCC 2.95 doesn't support the following, so we do not yet turn them
-# on by default (but I'd strongly recommend to all GCC 2.95 users to update
-# to a better compiler like GCC 3.x).
-# CXXFLAGS+= -ansi -W -Wno-unused-parameter -Woverloaded-virtual -Wdisabled-optimization -Wfloat-equal
+# Uncomment this for stricter compile time code verification
+# CXXFLAGS+= -Wshadow -Werror
 
-# The following causes problems on some systems where the system header
-# contain duplicate declarations already. That's really a bug in the 
-# system headers, but since it causes lots of warnings on those systems,
-# we don't enable it by default
-#CXXFLAGS+= -Wredundant-decls
-
-# Load the build rules & settings for the chosen backend
--include build.rules
-
-#######################################################################
-# Compile options - you can modify these to tweak ScummVM compilation #
-#######################################################################
-
-# Uncomment this to activate the MAD lib for compressed sound files
-DEFINES += -DUSE_MAD
-LIBS    += -lmad
-
-# Uncomment this to activate the Ogg Vorbis lib for compressed sound files
-# DEFINES += -DUSE_VORBIS
-# LIBS    += -lvorbisfile -lvorbis
-
-# Uncomment this to activate the ALSA lib for midi
-# DEFINES += -DUSE_ALSA
-# LIBS    += -lasound
-
-# Uncomment this to cause warnings to be treated as errors
-# CXXFLAGS+= -Werror
-
-# Uncomment this to use GCC 3.x specific dependency tracking (recommended)
-# HAVE_GCC3 = 1
-
-#######################################################################
-# Control which modules are built - uncomment any to disable module   #
-#######################################################################
-
-# DISABLE_SCUMM = 1
-# DISABLE_SIMON = 1
-# DISABLE_SKY = 1
-DISABLE_SWORD2 = 1
-
+CXXFLAGS:= -O -Wall -Wstrict-prototypes -Wuninitialized -Wno-long-long -Wno-multichar -Wno-unknown-pragmas $(CXXFLAGS)
+# Even more warnings...
+CXXFLAGS+= -pedantic -Wpointer-arith -Wcast-qual -Wcast-align -Wconversion
+CXXFLAGS+= -Wshadow -Wimplicit -Wundef -Wnon-virtual-dtor
+CXXFLAGS+= -Wno-reorder -Wwrite-strings -fcheck-new -Wctor-dtor-privacy 
 
 #######################################################################
 # Misc stuff - you should normally never have to edit this            #
@@ -86,14 +45,11 @@ dist:
 	$(RM) $(ZIPFILE)
 	$(ZIP) $(ZIPFILE) $(DISTFILES)
 
-# Until we add a nice configure tool, default to the SDL build rules
-build.rules:
-	$(CP) backends/sdl/build.rules build.rules
-
 deb:
 	ln -sf dists/debian;
 	debian/prepare
 	fakeroot debian/rules binary
+
 
 # Special target to create a application wrapper for Mac OS X
 bundle_name = ScummVM.app
@@ -109,9 +65,7 @@ bundle: scummvm-static
 # Special target to create a static linked binary for Mac OS X
 scummvm-static: $(OBJS)
 	$(CXX) $(LDFLAGS) -o scummvm-static $(OBJS) \
-		/sw/lib/libSDLmain.a /sw/lib/libSDL.a \
-		/sw/lib/libmad.a \
-		/sw/lib/libvorbisfile.a /sw/lib/libvorbis.a /sw/lib/libogg.a \
+		/sw/lib/libSDLmain.a /sw/lib/libSDL.a /sw/lib/libmad.a \
 		-framework Cocoa -framework Carbon -framework IOKit \
 		-framework OpenGL -framework AGL -framework QuickTime \
 		-framework AudioUnit -framework AudioToolbox
