@@ -7,6 +7,7 @@ For a more comprehensive changelog for the latest experimental CVS code, see:
 - Rewrote sound mixer, and several iMUSE bugs fixed
 - Adlib GM emulation table revamped, providing more accurate software MIDI
 - Added full and partial sound looping to Zak McKracken FmTowns
+- Default Makefile now uses configure script, old one is Makefile.noconf
 
 0.5.1 (2003-08-06) 
 - Rewrote Beneath a Steel Sky savegame code (see note in READMEs 'Known Bugs')
